[tool.poetry]
name = "icekube"
version = "1.1.0"
description = ""
authors = ["Mohit Gupta <mohit.gupta@withsecure.com>"]

[tool.poetry.dependencies]
python = ">= 3.8.1"
kubernetes = "^28.1.0"
neo4j = "^4.4.11"
typer = "^0.9"
pydantic = "^2.5.2"
tqdm = "^4.66.1"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "*"
ipython = "*"
flake8 = "^6.1.0"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
isort = {version = "^4.3.21", extras = ["pyproject"]}
mypy = "*"
pyflakes = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
pydocstyle = "*"
black = "*"
pdbpp = "*"
pyrepl = {git = "https://github.com/pypy/pyrepl"}
setuptools = "*"

[tool.poetry.scripts]
icekube = 'icekube.cli:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
